SSHd host keys restoration

--- a/handlers/remote-access.yml
+++ b/handlers/remote-access.yml
@@ -6,3 +6,8 @@
   ansible.builtin.service:
     name: "{{ lookup('service', 'sshd') }}"
     state: restarted
+
+- name: Reset SSH connection
+  listen:
+    - restart sshd
+  ansible.builtin.meta: reset_connection
