--- a/molecule/servers/inventory/group_vars/all/ssh.yml
+++ b/molecule/servers/inventory/group_vars/all/ssh.yml
@@ -2,3 +2,6 @@
 system_sshd_config:
   PubkeyAuthentication: true
   X11Forwarding: false
+
+system_sshd_host_keys:
+  sync_from: "files/{{ inventory_hostname }}"
