--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,4 +66,6 @@
   ansible.builtin.import_tasks: "{{ role_path }}/tasks/firewall.yml"
 
 - name: Remote access
+  tags:
+    - remote-access
   ansible.builtin.import_tasks: "{{ role_path }}/tasks/remote-access.yml"
